[project]
name = "rag-psql-vectorstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
]
